# Multi-chat-main

./: .gitignore  .replit  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: README.md  __init__.py
app/providers/: README.md  anthropic_provider.py  base.py  cerebras_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py
app/routes/: README.md  __init__.py  chat_routes.py  history_routes.py  provider_factory.py
static/: README.md
static/css/: tailwind.css
static/js/: main.js
templates/: README.md  index.html
