[tool.poetry]
name = "repl-nix-projectexplorer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
groq = "^0.11.0"
google-generativeai = "^0.8.1"
anthropic = "^0.34.2"
openai = "^1.46.0"
cerebras-cloud-sdk = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
